[package]
name = "anniv-edit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.11.20", features = ["json", "cookies", "rustls-tls"], default-features = false }
ring = "0.16.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
snafu = "0.7.5"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
url = "2.4.1"
anni-repo ={ git = "https://github.com/ProjectAnni/anni.git", package = "anni-repo" }
uuid = "1.4.1"
